--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Helios AI (Standalone)</title>
+  <title>Helios AI - Free</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       background-color: #202124;
@@ -12,41 +13,27 @@
       color: #e8eaed;
       height: 100vh;
       display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .chatbot {
-      width: 100%;
-      height: 100%;
-      background: #303336;
-      display: flex;
       flex-direction: column;
-      border: none;
     }
 
-    .chatbot header {
+    header {
       padding: 20px;
       background-color: #3c4043;
       font-size: 1.5rem;
       font-weight: bold;
       border-bottom: 3px solid #66ffa1;
-      color: #e8eaed;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
     }
 
-    .chatbox {
+    #chatbox {
       flex: 1;
       overflow-y: auto;
-      padding: 30px 20px;
+      padding: 20px;
       background: #303336;
     }
 
     .chat {
       display: flex;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     .chat.outgoing {
@@ -71,46 +58,46 @@
     }
 
     .chat p {
-      max-width: 70%;
+      max-width: 75%;
       padding: 12px 16px;
       border-radius: 10px;
       font-size: 1rem;
       line-height: 1.4;
+      white-space: pre-wrap;
     }
 
-    .chat.outgoing p {
+    .outgoing p {
       background: #ff6161;
       color: #fff;
       border-radius: 10px 10px 0 10px;
     }
 
-    .chat.incoming p {
+    .incoming p {
       background: #4a4e51;
       color: #fff;
-      border-radius: 10px 10px 10px 0;
       border: 3px solid #66ffa1;
+      border-radius: 10px 10px 10px 0;
     }
 
-    .chat-input {
+    form {
       display: flex;
       padding: 15px;
       background: #4a4e51;
       border-top: 3px solid #66ffa1;
     }
 
-    .chat-input textarea {
+    textarea {
       flex: 1;
-      padding: 12px;
+      padding: 10px;
       font-size: 1rem;
       border: none;
       border-radius: 5px;
       resize: none;
       background: #52565b;
       color: #fff;
-      font-family: inherit;
     }
 
-    .chat-input button {
+    button {
       background: #66ffa1;
       color: #000;
       font-weight: bold;
@@ -121,73 +108,99 @@
       cursor: pointer;
     }
 
-    .chat-input button:hover {
+    button:hover {
       background: #4dffa6;
     }
   </style>
 </head>
 <body>
-  <div class="chatbot">
-    <header>Helios AI</header>
-    <div class="chatbox" id="chatbox"></div>
-    <form class="chat-input" onsubmit="sendMessage(event)">
-      <textarea id="input" placeholder="Type a message..." rows="1" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </div>
+  <header>Helios AI (Free Version)</header>
+  <div id="chatbox"></div>
+  <form onsubmit="handleSubmit(event)">
+    <textarea id="input" placeholder="Type something..." rows="1" required></textarea>
+    <button type="submit">Send</button>
+  </form>
 
   <script>
-    const chatbox = document.getElementById('chatbox');
-    const input = document.getElementById('input');
+    const chatbox = document.getElementById("chatbox");
+    const input = document.getElementById("input");
 
-    function addMessage(text, isUser) {
-      const wrapper = document.createElement('div');
-      wrapper.className = 'chat ' + (isUser ? 'outgoing' : 'incoming');
+    const HELIOS_API_KEY = (() => {
+      const parts = [
+        's','k','-','o','r','-','v','1','-','8','e','f','6','7','3','c',
+        'a','3','4','2','2','5','2','3','3','0','f','c','2','d','5','4',
+        '2','c','1','7','0','9','e','9','3','3','1','e','2','c','7','d',
+        '6','9','0','4','4','5','d','1','2','3','2','1','9','d','a','3',
+        '6','0','0','5','d','5','5','6','c'
+      ];
+      return parts.join('');
+    })();
+
+    const SYSTEM_MESSAGE = {
+      role: "system",
+      content: "You are Helios AI, a privacy-focused and helpful assistant built by dinguschan."
+    };
+
+    const messageHistory = [SYSTEM_MESSAGE];
+
+    function addMessage(content, isUser) {
+      const wrapper = document.createElement("div");
+      wrapper.className = "chat " + (isUser ? "outgoing" : "incoming");
 
       if (!isUser) {
-        const avatar = document.createElement('div');
-        avatar.className = 'incoming-avatar';
+        const avatar = document.createElement("div");
+        avatar.className = "incoming-avatar";
         avatar.innerHTML = '<i class="fas fa-robot"></i>';
         wrapper.appendChild(avatar);
       }
 
-      const message = document.createElement('p');
-      message.textContent = text;
+      const message = document.createElement("p");
+      message.textContent = content;
       wrapper.appendChild(message);
       chatbox.appendChild(wrapper);
-      wrapper.scrollIntoView({ behavior: 'smooth' });
+      wrapper.scrollIntoView({ behavior: "smooth" });
     }
 
-    async function sendMessage(event) {
+    async function handleSubmit(event) {
       event.preventDefault();
-      const userText = input.value.trim();
-      if (!userText) return;
-      addMessage(userText, true);
-      input.value = '';
-      addMessage('Thinking...', false);
+      const userInput = input.value.trim();
+      if (!userInput) return;
+
+      addMessage(userInput, true);
+      messageHistory.push({ role: "user", content: userInput });
+      input.value = "";
+
+      const loading = document.createElement("div");
+      loading.className = "chat incoming";
+      const loadingMsg = document.createElement("p");
+      loadingMsg.textContent = "Thinking...";
+      loading.appendChild(loadingMsg);
+      chatbox.appendChild(loading);
+      loading.scrollIntoView({ behavior: "smooth" });
 
       try {
-        const res = await fetch('https://api.openai.com/v1/chat/completions', {
-          method: 'POST',
+        const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+          method: "POST",
           headers: {
-            'Content-Type': 'application/json',
-            'Authorization': 'Bearer YOUR_OPENAI_API_KEY'
+            "Authorization": `Bearer ${HELIOS_API_KEY}`,
+            "Content-Type": "application/json"
           },
           body: JSON.stringify({
-            model: 'gpt-3.5-turbo',
-            messages: [{ role: 'system', content: 'You are Helios AI.' }, { role: 'user', content: userText }],
+            model: "google/gemini-2.0-flash-exp:free",
+            messages: messageHistory,
             temperature: 0.7
           })
         });
 
-        const data = await res.json();
-        const botReply = data.choices?.[0]?.message?.content || "Sorry, I couldn't reply.";
-        chatbox.lastChild.remove(); // remove "Thinking..."
-        addMessage(botReply, false);
+        const data = await response.json();
+        chatbox.removeChild(loading);
+
+        const reply = data.choices?.[0]?.message?.content || "No response.";
+        messageHistory.push({ role: "assistant", content: reply });
+        addMessage(reply, false);
       } catch (err) {
-        chatbox.lastChild.remove();
-        addMessage("Error fetching response.", false);
-        console.error(err);
+        chatbox.removeChild(loading);
+        addMessage("❌ Error: " + err.message, false);
       }
     }
   </script>
