--- a/index.html
+++ b/index.html
@@ -1,209 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Helios AI - Free</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>Helios AI (Free, No Key!)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <script src="https://js.puter.com/v2/"></script> <!-- Keyless AI access via Puter.js --from OpenRouter's free tier:contentReference[oaicite:5]{index=5} -->
   <style>
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      background-color: #202124;
-      font-family: Arial, sans-serif;
-      color: #e8eaed;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      padding: 20px;
-      background-color: #3c4043;
-      font-size: 1.5rem;
-      font-weight: bold;
-      border-bottom: 3px solid #66ffa1;
-    }
-
-    #chatbox {
-      flex: 1;
-      overflow-y: auto;
-      padding: 20px;
-      background: #303336;
-    }
-
-    .chat {
-      display: flex;
-      margin-bottom: 15px;
-    }
-
-    .chat.outgoing {
-      justify-content: flex-end;
-    }
-
-    .chat.incoming {
-      justify-content: flex-start;
-    }
-
-    .incoming-avatar {
-      width: 32px;
-      height: 32px;
-      background: #ff6161;
-      color: #fff;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      margin-right: 10px;
-    }
-
-    .chat p {
-      max-width: 75%;
-      padding: 12px 16px;
-      border-radius: 10px;
-      font-size: 1rem;
-      line-height: 1.4;
-      white-space: pre-wrap;
-    }
-
-    .outgoing p {
-      background: #ff6161;
-      color: #fff;
-      border-radius: 10px 10px 0 10px;
-    }
-
-    .incoming p {
-      background: #4a4e51;
-      color: #fff;
-      border: 3px solid #66ffa1;
-      border-radius: 10px 10px 10px 0;
-    }
-
-    form {
-      display: flex;
-      padding: 15px;
-      background: #4a4e51;
-      border-top: 3px solid #66ffa1;
-    }
-
-    textarea {
-      flex: 1;
-      padding: 10px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 5px;
-      resize: none;
-      background: #52565b;
-      color: #fff;
-    }
-
-    button {
-      background: #66ffa1;
-      color: #000;
-      font-weight: bold;
-      border: none;
-      padding: 10px 20px;
-      margin-left: 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #4dffa6;
-    }
+    body, html { margin:0; height:100%; background:#202124; font-family:Arial,sans-serif; color:#e8eaed; }
+    #header { padding:20px; background:#3c4043; font-size:1.5rem; border-bottom:3px solid #66ffa1; }
+    #chat { flex:1; overflow:auto; padding:20px; background:#303336; }
+    .chat-container { display:flex; flex-direction:column; height:100%; }
+    .msg { display:flex; margin-bottom:15px; }
+    .user { justify-content:flex-end; }
+    .bot { justify-content:flex-start; }
+    .bot .avatar { width:32px;height:32px;background:#ff6161;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:20px;margin-right:10px; }
+    .text { max-width:70%; padding:12px 16px; border-radius:10px; line-height:1.4; white-space:pre-wrap; }
+    .user .text { background:#ff6161; color:#fff; border-radius:10px 10px 0 10px; }
+    .bot .text { background:#4a4e51; color:#fff; border:3px solid #66ffa1; border-radius:10px 10px 10px 0; }
+    #inputBar { display:flex; padding:15px; background:#4a4e51; border-top:3px solid #66ffa1; }
+    textarea { flex:1; padding:10px; font-size:1rem; border:none; border-radius:5px; resize:none; background:#52565b; color:#fff; }
+    button { margin-left:10px; padding:10px 20px; font-weight:bold; background:#66ffa1; color:#000; border:none; border-radius:5px; cursor:pointer; }
+    button:hover { background:#4dffa6; }
   </style>
 </head>
 <body>
-  <header>Helios AI (Free Version)</header>
-  <div id="chatbox"></div>
-  <form onsubmit="handleSubmit(event)">
-    <textarea id="input" placeholder="Type something..." rows="1" required></textarea>
-    <button type="submit">Send</button>
-  </form>
+  <div class="chat-container">
+    <div id="header">Helios AI — free, no key</div>
+    <div id="chat"></div>
+
+    <form id="inputBar" onsubmit="handleSubmit(event)">
+      <textarea id="userInput" rows="1" placeholder="Type a message…" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </div>
 
   <script>
-    const chatbox = document.getElementById("chatbox");
-    const input = document.getElementById("input");
+    const chatEl = document.getElementById('chat');
+    const inputEl = document.getElementById('userInput');
 
-    const HELIOS_API_KEY = (() => {
-      const parts = [
-        's','k','-','o','r','-','v','1','-','8','e','f','6','7','3','c',
-        'a','3','4','2','2','5','2','3','3','0','f','c','2','d','5','4',
-        '2','c','1','7','0','9','e','9','3','3','1','e','2','c','7','d',
-        '6','9','0','4','4','5','d','1','2','3','2','1','9','d','a','3',
-        '6','0','0','5','d','5','5','6','c'
-      ];
-      return parts.join('');
-    })();
-
-    const SYSTEM_MESSAGE = {
-      role: "system",
-      content: "You are Helios AI, a privacy-focused and helpful assistant built by dinguschan."
-    };
-
-    const messageHistory = [SYSTEM_MESSAGE];
-
-    function addMessage(content, isUser) {
-      const wrapper = document.createElement("div");
-      wrapper.className = "chat " + (isUser ? "outgoing" : "incoming");
-
+    function addMessage(text, isUser) {
+      const msg = document.createElement('div');
+      msg.className = 'msg ' + (isUser ? 'user' : 'bot');
       if (!isUser) {
-        const avatar = document.createElement("div");
-        avatar.className = "incoming-avatar";
-        avatar.innerHTML = '<i class="fas fa-robot"></i>';
-        wrapper.appendChild(avatar);
+        const av = document.createElement('div');
+        av.className = 'avatar'; av.textContent = '🤖';
+        msg.appendChild(av);
       }
-
-      const message = document.createElement("p");
-      message.textContent = content;
-      wrapper.appendChild(message);
-      chatbox.appendChild(wrapper);
-      wrapper.scrollIntoView({ behavior: "smooth" });
+      const span = document.createElement('div');
+      span.className = 'text';
+      span.textContent = text;
+      msg.appendChild(span);
+      chatEl.appendChild(msg);
+      msg.scrollIntoView({ behavior: 'smooth' });
     }
 
-    async function handleSubmit(event) {
-      event.preventDefault();
-      const userInput = input.value.trim();
-      if (!userInput) return;
+    async function handleSubmit(e) {
+      e.preventDefault();
+      const text = inputEl.value.trim();
+      if (!text) return;
+      addMessage(text, true);
+      inputEl.value='';
 
-      addMessage(userInput, true);
-      messageHistory.push({ role: "user", content: userInput });
-      input.value = "";
-
-      const loading = document.createElement("div");
-      loading.className = "chat incoming";
-      const loadingMsg = document.createElement("p");
-      loadingMsg.textContent = "Thinking...";
-      loading.appendChild(loadingMsg);
-      chatbox.appendChild(loading);
-      loading.scrollIntoView({ behavior: "smooth" });
-
+      addMessage('Thinking…', false);
       try {
-        const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
-          method: "POST",
-          headers: {
-            "Authorization": `Bearer ${HELIOS_API_KEY}`,
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({
-            model: "google/gemini-2.0-flash-exp:free",
-            messages: messageHistory,
-            temperature: 0.7
-          })
+        const res = await puter.ai.chat(text, {
+          model: 'openrouter:meta-llama/llama-3.1-8b-instruct' // free, multilingual, capable
         });
-
-        const data = await response.json();
-        chatbox.removeChild(loading);
-
-        const reply = data.choices?.[0]?.message?.content || "No response.";
-        messageHistory.push({ role: "assistant", content: reply });
-        addMessage(reply, false);
+        chatEl.lastChild.remove();
+        addMessage(res, false);
       } catch (err) {
-        chatbox.removeChild(loading);
-        addMessage("❌ Error: " + err.message, false);
+        chatEl.lastChild.remove();
+        addMessage('❌ Error: ' + err.message, false);
       }
     }
   </script>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 </html>
