--- a/index.html
+++ b/index.html
@@ -1,78 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Helios AI (Free, No Key!)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="https://js.puter.com/v2/"></script> <!-- Keyless AI access via Puter.js --from OpenRouter's free tier:contentReference[oaicite:5]{index=5} -->
-  <style>
-    body, html { margin:0; height:100%; background:#202124; font-family:Arial,sans-serif; color:#e8eaed; }
-    #header { padding:20px; background:#3c4043; font-size:1.5rem; border-bottom:3px solid #66ffa1; }
-    #chat { flex:1; overflow:auto; padding:20px; background:#303336; }
-    .chat-container { display:flex; flex-direction:column; height:100%; }
-    .msg { display:flex; margin-bottom:15px; }
-    .user { justify-content:flex-end; }
-    .bot { justify-content:flex-start; }
-    .bot .avatar { width:32px;height:32px;background:#ff6161;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:20px;margin-right:10px; }
-    .text { max-width:70%; padding:12px 16px; border-radius:10px; line-height:1.4; white-space:pre-wrap; }
-    .user .text { background:#ff6161; color:#fff; border-radius:10px 10px 0 10px; }
-    .bot .text { background:#4a4e51; color:#fff; border:3px solid #66ffa1; border-radius:10px 10px 10px 0; }
-    #inputBar { display:flex; padding:15px; background:#4a4e51; border-top:3px solid #66ffa1; }
-    textarea { flex:1; padding:10px; font-size:1rem; border:none; border-radius:5px; resize:none; background:#52565b; color:#fff; }
-    button { margin-left:10px; padding:10px 20px; font-weight:bold; background:#66ffa1; color:#000; border:none; border-radius:5px; cursor:pointer; }
-    button:hover { background:#4dffa6; }
-  </style>
-</head>
-<body>
-  <div class="chat-container">
-    <div id="header">Helios AI — free, no key</div>
-    <div id="chat"></div>
-
-    <form id="inputBar" onsubmit="handleSubmit(event)">
-      <textarea id="userInput" rows="1" placeholder="Type a message…" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </div>
-
-  <script>
-    const chatEl = document.getElementById('chat');
-    const inputEl = document.getElementById('userInput');
-
-    function addMessage(text, isUser) {
-      const msg = document.createElement('div');
-      msg.className = 'msg ' + (isUser ? 'user' : 'bot');
-      if (!isUser) {
-        const av = document.createElement('div');
-        av.className = 'avatar'; av.textContent = '🤖';
-        msg.appendChild(av);
-      }
-      const span = document.createElement('div');
-      span.className = 'text';
-      span.textContent = text;
-      msg.appendChild(span);
-      chatEl.appendChild(msg);
-      msg.scrollIntoView({ behavior: 'smooth' });
-    }
-
-    async function handleSubmit(e) {
-      e.preventDefault();
-      const text = inputEl.value.trim();
-      if (!text) return;
-      addMessage(text, true);
-      inputEl.value='';
-
-      addMessage('Thinking…', false);
-      try {
-        const res = await puter.ai.chat(text, {
-          model: 'openrouter:meta-llama/llama-3.1-8b-instruct' // free, multilingual, capable
-        });
-        chatEl.lastChild.remove();
-        addMessage(res, false);
-      } catch (err) {
-        chatEl.lastChild.remove();
-        addMessage('❌ Error: ' + err.message, false);
-      }
-    }
-  </script>
-</body>
-</html>
+<iframe src="https://qwen.ai" width="100%" height="600px" frameborder="0"></iframe>
